@@ -65,7 +65,7 @@ void output(char filename[], zVec3D p1[], int n1, zVec3D p2[], int n2, zVec3D *c
   fprintf( fp, "center: " ); zVec3DDataNLFPrint( fp, c2 );
   fprintf( fp, "radius: 0.005\n" );
   /* convex set 1 */
-  zCH3D( &ch, p1, n1 );
+  zConvexHull3D( &ch, p1, n1 );
   fprintf( fp, "[shape]\n" );
   fprintf( fp, "name: ch1\n" );
   fprintf( fp, "type: polyhedron\n" );
@@ -73,7 +73,7 @@ void output(char filename[], zVec3D p1[], int n1, zVec3D p2[], int n2, zVec3D *c
   zPH3DFPrintZTK( fp, &ch );
   zPH3DDestroy( &ch );
   /* convex set 2 */
-  zCH3D( &ch, p2, n2 );
+  zConvexHull3D( &ch, p2, n2 );
   fprintf( fp, "[shape]\n" );
   fprintf( fp, "name: ch2\n" );
   fprintf( fp, "type: polyhedron\n" );
